package Model;

public class FixedValues {
    public int StartMoney = 30000;
    public int PassedStart = 4000;
    public int NumOfSqaures = 40;
    public int MinPlayers = 3;
    public int MaxPlayers = 6;
    public int NumDice = 2;
    public int TaxPrice = 10;

}
