package Model;

public class Rules {
    private Game game;
    private Player[] players;
    private int NumOfBankruptPlayers;

    public Rules(Game game){
        this.game = game;
    }

    public void startTurn(Player player){

    }


}
